fixing close on mobile

--- a/src/components/program/program.styles.css
+++ b/src/components/program/program.styles.css
@@ -56,4 +56,7 @@
         display: flex;
         flex-direction: column;
     }
+    .close{ 
+        margin-left: 350px;
+    }
 }
